k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pmo-system
  labels:
    app.kubernetes.io/part-of: pmo-system
